# UVTimer-Firmware

Simulation/AC-Coupled-Supply/: .gitignore  AP2127_ADJ.mdl  Clear_eagle_backups_&_gerbers.bat  LM7805.mdl  Simulated01.sch  Simulated01.sch.final.net  Simulated01.sch.net  Simulated02.sch  Simulated02.sch.final.net  Simulated02.sch.net  Simulated02.sch.sim  Simulated02.sch.sim.txt  Simulated02.sch.simcfg  Simulated03.sch  Simulated03.sch.final.net  Simulated03.sch.net  Simulated03.sch.sim.txt  Simulated03.sch.simcfg  Simulated04.sch.final.net  Simulated04.sch.net  Simulated04.sch.sim.txt  Simulated04.sch.simcfg  Simulated05.sch  Simulated05.sch.final.net  Simulated05.sch.net  Simulated05.sch.sim.txt  Simulated05.sch.simcfg  ZMR500.mdl  eagle.epf
Software/TestBed/TB-IO-Server/: .gitignore
Software/UVTimer-Firmware/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  local.cmake.example  shell-avr-gcc.bat  start-clion-avr-gcc.bat  toolchain.local.avr.gcc.cmake
Software/UVTimer-Firmware/cmake/: Arduino.cmake  StandardProjectSettings.cmake  helpers.cmake
Software/UVTimer-Firmware/config/: WelcomeShell.txt  config.bat  header-cpp.txt  uncrustify-cpp-doc.cfg  uncrustify.cfg
Software/UVTimer-Firmware/libs/: CMakeLists.txt
Software/UVTimer-Firmware/libs/EasyButton/: CMakeLists.txt
Software/UVTimer-Firmware/libs/arduino-fsm/: CMakeLists.txt  Fsm.cpp  Fsm.h
Software/UVTimer-Firmware/libs/libarduinocore/: CMakeLists.txt
Software/UVTimer-Firmware/src/: CMakeLists.txt  DisplayLED.cpp  DisplayLED.h  io.cpp  io.h  main.cpp  setup.h  states.h  stdinout.cpp  stdinout.h  uvtimer.cpp  uvtimer.h
Software/UVTimer-Firmware/tests/: CMakeLists.txt  CMakeLists.txt.in
Software/UVTimer-Firmware/tests/common/: Arduino.cpp  Arduino.h  stdint-gcc.h
Software/UVTimer-Firmware/tests/simple/: Arduino.cpp  Arduino.h  CMakeLists.txt  EasyButton.h  display_led_example.cpp  display_led_test.cpp  state_machine.cpp
Software/UVTimer-Firmware/tests/simpleTest/: CMakeLists.txt  display_led_tests.cpp  test.cpp
Software/test-inputs/: test-inputs.ino
Software/uvtimer-uno-test01/: uvtimer-uno-test01.ino
Software/uvtimer-uno-test02/: uvtimer-uno-test02.ino
Software/uvtimer-uno02/: io.h  states.h
